--- a/theme/style.css
+++ b/theme/style.css
@@ -1,8 +1,8 @@
 body {
-  color: darkblue;
+  color: white;
   font-size: 2em;
   font-family: 'Lobster';
-  background-color: dimgray;
+  background-color: black;
 }
 
 
